--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
 		/>
-		<title>Sammi | Application</title>
+		<title>Block | Application</title>
 	</head>
 	<body>
 		<div id="app"></div>
